# docs-to-eval

./: .env  .gitignore  AGENTIC_SYSTEM_IMPROVEMENTS.md  COMPLEXITY_AWARE_AGENTIC_SYSTEM.md  CORRECTED_AGENTIC_FLOW.md  CRITICAL_FIXES.py  CRITICAL_FIXES_IMPLEMENTATION.md  CRITICAL_FLAWS_ANALYSIS.md  DEVICE_COMPATIBILITY_GUIDE.md  DOMAIN_CORPUS_DEMO_SUMMARY.md  DOMAIN_SPECIFIC_IMPROVEMENTS.md  ENHANCED_AGENTIC_VERIFICATION.md  FICTIONAL_QWEN_TEST.py  FINAL_VALIDATION_WITH_FIXES.py  FINETUNE_TEST_SET_USAGE.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_SUMMARY.txt  INTEGRATION_GUIDE.md  LM_EVAL_INTEGRATION.py  LOCAL_QWEN_TEST.py  QWEN_CORRECT_TEST.py  README.md  SIMPLE_QWEN_TEST.py  ULTIMATE_FULL_AGENT_TEST.py  ULTIMATE_VALIDATION_RESULTS.json  backend_agent_test_results.json  demo_concurrent_gemini.py  demo_improved_verification.py  domain_testing_report.json  final_chonkie_proof.py  process_etruscan_corpus.py  pyproject.toml  pytest.ini  run_server.py  simple_etruscan_demo.py  start_server.sh  summary.txt  test_agentic_fix.py  test_agentic_local.py  (+19 more)
cache/: evaluation_runs.json
data/: convert_json_to_txt.py  extract_data.py  wikipedia_etru_content.json
data/etruscan_texts/: aita_mythology.txt  cel_goddess.txt  corpus_speculorum_etruscorum.txt  daily_life_of_the_etruscans.txt  etruscan_civilization.txt  etruscan_military_history.txt  etruscan_mythology.txt  lead_plaque_of_magliano.txt  leinth.txt  liber_linteus.txt  tabula_capuana.txt  thalna.txt
docs_to_eval/: __init__.py  __main__.py  app.py
docs_to_eval/cli/: __init__.py  interactive.py  main.py
docs_to_eval/core/: __init__.py  advanced_question_generation.py  agentic.py  agentic_question_generator.py  benchmarks.py  classification.py  domain_verification.py  evaluation.py  exceptions.py  lora.py  lora_integration.py  mixed_verification.py  pipeline.py  qwen_evaluators.py  utils.py  verification.py
docs_to_eval/core/agentic/: INTEGRATION_GUIDE.md  LM_EVAL_INTEGRATION_GUIDE.md  README.md  STREAMLINED_SYSTEM.md  __init__.py  agents.py  demo.py  generator.py  improved_agents.py  intelligent_classifier.py  lm_eval_analysis.md  lm_eval_exporter.py  lm_eval_integration.py  lm_eval_transform.py  lm_eval_utils.py  models.py  orchestrator.py  prompt_optimizer.py  streamlined_agents.py  streamlined_orchestrator.py  validation.py
docs_to_eval/core/finetune/: __init__.py  lora.py  lora_integration.py  models.py
docs_to_eval/llm/: __init__.py  base.py  concurrent_gemini.py  gemini_sdk_interface.py  groq_interface.py  llm_factory.py  mock_interface.py  openrouter_interface.py  qwen_local_interface.py
docs_to_eval/ui_api/: __init__.py  main.py  routes.py  websockets.py
docs_to_eval/ui_api/router/: __init__.py  config.py  corpus.py  evaluation.py  status.py
docs_to_eval/utils/: __init__.py  advanced_evaluation.py  config.py  logging.py  similarity.py  statistical_analysis.py  text_processing.py
domain_spcfc_general_corpus/: extract_data.py  wikipedia_etru_content.json
domain_spcfc_general_corpus/etruscan_texts/: aita_mythology.txt  catha_mythology.txt  cel_goddess.txt  charun.txt  corpus_inscriptionum_etruscarum.txt  corpus_speculorum_etruscorum.txt  divination.txt  etruscan_architecture.txt  etruscan_civilization.txt  etruscan_mythology.txt  etruscan_religion.txt  etruscan_society.txt  fufluns.txt  haruspices.txt  haruspicy.txt  hercle.txt  laran.txt  lead_plaque_of_magliano.txt  leinth.txt  liber_linteus.txt  list_of_etruscan_mythological_figures.txt  list_of_etruscan_names_for_greek_heroes.txt  liver_of_piacenza.txt  maris_mythology.txt  menrva.txt  priestesses.txt  selvans.txt  tages.txt  thalna.txt  tinia.txt  turan_mythology.txt  turms.txt  uni_mythology.txt  usil_god.txt  vegoia.txt  villanovan_culture.txt  voltumna.txt  votive_offering.txt  women_in_etruscan_society.txt
examples/: agentic_pipeline_walkthrough.py  backend_agent_loop_demo.py  context_injection_demo.py  etruscan_corpus_agentic_demo.py  etruscan_corpus_processing_demo.py  fictional_qwen_pipeline_demo.py  final_validation_walkthrough.py  improved_system_demo.py  local_qwen_pipeline_demo.py  mixed_verification_showcase.py  qwen_model_identifier_demo.py  real_api_evaluation_demo.py  simple_qwen_pipeline_demo.py  ultimate_agentic_workflow_demo.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: classification-tab.tsx  docs-to-eval-app-dynamic.tsx  runs-tab.tsx  (+5 more)
manual_tests/: __init__.py  critical_fixes_walkthrough.py  llm_provider_diagnostics.py  lm_eval_harness_adapter.py
misc/: latest-improvements.md
output/: evaluation_results_5c4e0a37-f459-48da-9bdd-356b53c717bc.json  refactored_system_test_20250731_195306.json  refactored_system_test_20250731_195327.json  refactored_system_test_20250731_195351.json  refactored_system_test_20250731_195412.json  refactored_system_test_20250731_195606.json
scripts/: validate_system.py
tests/: ULTIMATE_FULL_AGENT_TEST.py  __init__.py  conftest.py  demo_improved_verification.py  local_qwen_test.py  process_etruscan_corpus.py  test_agentic_pipeline.py  test_api_routes.py  test_benchmark_factory.py  test_chonkie_concatenation.py  test_concurrent_gemini_api.py  test_core_workflow.py  test_etruscan_agentic_flow.py  test_full_agentic_flow.py  test_lm_eval_export.py  test_lora_training_integration.py  test_math_verify_integration.py  test_pipeline.py  test_quality_filtering.py  test_revised_classification.py  test_system_integration.py  test_ui_workflow_complete.py  test_verification_fix.py  test_websocket_integration.py
tests/automated/: test_api_contract.py  test_qwen_local_endpoint.py  test_utils_chunking.py
tests/manual/: critical_fixes_walkthrough.py  fictional_qwen_test.py  final_validation_with_fixes.py  llm_provider_diagnostics.py  lm_eval_harness_adapter.py  local_qwen_test.py  manual_full_agentic_test.py  qwen_correct_test.py  simple_qwen_test.py  test_backend_agent_loop.py  test_context_fix.py  test_improved_system.py  test_real_api.py  ultimate_full_agent_test.py
(+1 files in other folders)
