[project]
name = "docs-to-eval"
version = "0.1.0"
description = "Automated LLM Evaluation System - Generate domain-specific benchmarks and evaluate LLMs"
authors = [
    {name = "docs-to-eval", email = "noreply@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["llm", "evaluation", "benchmarking", "nlp", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "typer>=0.16.0",
    "rich>=14.1.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.33.0",
    "websockets>=13.1",
    "pyyaml>=6.0.2",
    "python-multipart>=0.0.20",
    "httpx>=0.25.0",
    "math-verify>=0.1.0",
    "numpy>=1.21.0",
    "chonkie>=1.1.1",
    "sentence-transformers>=5.0.0",
    "python-dotenv>=1.1.1",
    "openai>=1.98.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.scripts]
docs-to-eval = "main_interface:main"
docs-to-eval-demo = "demo:main"

[project.urls]
Homepage = "https://github.com/example/docs-to-eval"
Repository = "https://github.com/example/docs-to-eval"
Documentation = "https://github.com/example/docs-to-eval#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "README.md",
    "corpus/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "README.md",
    "corpus/**/*",
]
